--- a/README.org
+++ b/README.org
@@ -1893,6 +1893,7 @@ in {
 ** TODO make nixos install image
 ** TODO install working
 had to add git and enable extra experimental features nix-command and flakes in order to get the cogs turning; may need to update the flake.lock in order for the way it's supposed to be installed to work.
+** TODO Error caused by user's config or system: doom/config.el, (file-missing Cannot open load file No such file or directory /home/chu/.local/share/roswell/helper.el)
 * References / Credits
 - [[https://www.youtube.com/@wilfridtaylor][Wil T]]
 - [[https://github.com/librephoenix/nixos-config][librephoenix/nixos-config]]
