--- a/README.org
+++ b/README.org
@@ -324,6 +324,7 @@ Note: Currently disabled as it does not apply to this set up.
 #+begin_src nix :tangle ./flake.nix
 {
   description = "chu's nixOS config flake";
+  leaflet = "test";
 
   outputs =
     inputs@{ self, ... }:
@@ -1709,7 +1710,6 @@ exit 1
     enable = true;
   };
 }
-
 #+end_src
 *** vm/vm.nix
 #+begin_src nix :mkdirp yes :tangle ./user/app/vm/vm.nix
@@ -1899,6 +1899,7 @@ The author of all themes is LibrePhoenix.
 had to add git and enable extra experimental features nix-command and flakes in order to get the cogs turning; may need to update the flake.lock in order for the way it's supposed to be installed to work.
 ** TODO roswell install script
 ** TODO Error caused by user's config or system: doom/config.el, (file-missing Cannot open load file No such file or directory /home/chu/.local/share/roswell/helper.el)
+** TODO rustdesk
 * References / Credits
 - [[https://www.youtube.com/@wilfridtaylor][Wil T]]
 - [[https://github.com/librephoenix/nixos-config][librephoenix/nixos-config]]
