--- a/README.org
+++ b/README.org
@@ -1188,10 +1188,9 @@ Note: Currently disabled as it does not apply to this set up.
 
   home.file.".librewolf/librewolf.overrides.cfg".text =
     ''
-    # defaultPref("font.name.serif.x-western","
-    # '' + userSettings.font + ''
-    #   ");
-
+    defaultPref("font.name.serif.x-western","
+    '' + userSettings.font + ''
+      ");
           defaultPref("font.size.variable.x-western",20);
           defaultPref("browser.toolbars.bookmarks.visibility","always");
           defaultPref("privacy.resisttFingerprinting.letterboxing", true);
@@ -1201,10 +1200,9 @@ Note: Currently disabled as it does not apply to this set up.
           defaultPref("privacy.clearOnShutdown.cookies",true);
           defaultPref("gfx.webrender.software.opengl",false);
           defaultPref("webgl.disabled",true);
-        #   pref("font.name.serif.x-western","
-        #   '' + userSettings.font + ''
-        # ");
-
+          pref("font.name.serif.x-western","
+          '' + userSettings.font + ''
+        ");
             pref("font.size.variable.x-western",20);
             pref("browser.toolbars.bookmarks.visibility","always");
             pref("privacy.resisttFingerprinting.letterboxing", true);
