--- a/README.org
+++ b/README.org
@@ -1175,21 +1175,25 @@ Note: Currently disabled as it does not apply to this set up.
 
 {
   # Module installing librewolf as default browser
-  home.packages = if (userSettings.wmType == "wayland") then
-    [ pkgs.librewolf-wayland ]
-  else
-    [ pkgs.librewolf ];
+  home.packages =
+    if (userSettings.wmType == "wayland") then [ pkgs.librewolf-wayland ] else [ pkgs.librewolf ];
 
-  home.sessionVariables = if (userSettings.wmType == "wayland") then {
-    DEFAULT_BROWSER = "${pkgs.librewolf-wayland}/bin/librewolf";
-  } else {
-    DEFAULT_BROWSER = "${pkgs.librewolf}/bin/librewolf";
-  };
+  home.sessionVariables =
+    if (userSettings.wmType == "wayland") then
+      {
+        DEFAULT_BROWSER = "${pkgs.librewolf-wayland}/bin/librewolf";
+      }
+    else
+      {
+        DEFAULT_BROWSER = "${pkgs.librewolf}/bin/librewolf";
+      };
 
   home.file.".librewolf/librewolf.overrides.cfg".text =
     ''
-    defaultPref("font.name.serif.x-western","
-    '' + userSettings.font + ''
+      defaultPref("font.name.serif.x-western","
+    ''
+    + userSettings.font
+    + ''
       ");
           defaultPref("font.size.variable.x-western",20);
           defaultPref("browser.toolbars.bookmarks.visibility","always");
@@ -1201,18 +1205,20 @@ Note: Currently disabled as it does not apply to this set up.
           defaultPref("gfx.webrender.software.opengl",false);
           defaultPref("webgl.disabled",true);
           pref("font.name.serif.x-western","
-          '' + userSettings.font + ''
-        ");
-            pref("font.size.variable.x-western",20);
-            pref("browser.toolbars.bookmarks.visibility","always");
-            pref("privacy.resisttFingerprinting.letterboxing", true);
-            pref("network.http.referer.XOriginPolicy",2);
-            pref("privacy.clearOnShutdown.history",true);
-            pref("privacy.clearOnShutdown.downloads",true);
-            pref("privacy.clearOnShutdown.cookies",true);
-            pref("gfx.webrender.software.opengl",false);
-            pref("webgl.disabled",true);
-      '';
+    ''
+    + userSettings.font
+    + ''
+      ");
+          pref("font.size.variable.x-western",20);
+          pref("browser.toolbars.bookmarks.visibility","always");
+          pref("privacy.resisttFingerprinting.letterboxing", true);
+          pref("network.http.referer.XOriginPolicy",2);
+          pref("privacy.clearOnShutdown.history",true);
+          pref("privacy.clearOnShutdown.downloads",true);
+          pref("privacy.clearOnShutdown.cookies",true);
+          pref("gfx.webrender.software.opengl",false);
+          pref("webgl.disabled",true);
+    '';
 
   xdg.mimeApps.defaultApplications = {
     "text/html" = "librewolf.desktop";
