--- a/README.org
+++ b/README.org
@@ -22,10 +22,9 @@ Clone dotfiles:
 
 #+name: install-clone-dotfiles
 #+begin_src sh
-if [ $# -gt 0 ] # if no arguments are passed to the script, then
-  then
-    SCRIPT_DIR=$1 # arguments were passed
-  else
+if [ $# -gt 0 ]; then # if no arguments are passed to the script, then
+    SCRIPT_DIR=$1     # arguments were passed
+else
     SCRIPT_DIR=~/.config/dogfiles # arguments were not passed
 fi
 nix-shell -p git --command "git clone https://github.com/chumutt/dogfiles $SCRIPT_DIR"
@@ -35,7 +34,7 @@ Generate hardware configuration for the system:
 
 #+name: install-generate-hardware-config
 #+begin_src sh
-sudo nixos-generate-config --show-hardware-config > $SCRIPT_DIR/system/hardware-configuration.nix
+sudo nixos-generate-config --show-hardware-config >$SCRIPT_DIR/system/hardware-configuration.nix
 #+end_src
 
 Check if the system is running UEFI or BIOS:
@@ -46,7 +45,7 @@ if [ -d /sys/firmware/efi/efivars ]; then
     sed -i "0,/bootMode.*=.*\".*\";/s//bootMode = \"uefi\";/" $SCRIPT_DIR/flake.nix
 else
     sed -i "0,/bootMode.*=.*\".*\";/s//bootMode = \"bios\";/" $SCRIPT_DIR/flake.nix
-    grubDevice=$(findmnt / | awk -F' ' '{ print $2 }' | sed 's/\[.*\]//g' | tail -n 1 | lsblk -no pkname | tail -n 1 )
+    grubDevice=$(findmnt / | awk -F' ' '{ print $2 }' | sed 's/\[.*\]//g' | tail -n 1 | lsblk -no pkname | tail -n 1)
     sed -i "0,/grubDevice.*=.*\".*\";/s//grubDevice = \"\/dev\/$grubDevice\";/" $SCRIPT_DIR/flake.nix
 fi
 #+end_src
@@ -66,23 +65,23 @@ Open up editor to manually edit flake.nix before install:
 #+name: install-edit-flake-prompt
 #+begin_src sh
 if [ -z "$EDITOR" ]; then
-    EDITOR=nano;
+    EDITOR=nano
 fi
-$EDITOR $SCRIPT_DIR/flake.nix;
+$EDITOR $SCRIPT_DIR/flake.nix
 #+end_src
 
 Set permissions for files that should be owned by root (disabled for now):
 
 #+name: install-harden-core-configuration
 #+begin_src sh
-# sudo $SCRIPT_DIR/bin/harden $SCRIPT_DIR;
+sudo $SCRIPT_DIR/bin/harden $SCRIPT_DIR
 #+end_src
 
 Rebuild system:
 
 #+name: install-nixos-rebuild-system-with-flake
 #+begin_src sh
-sudo nixos-rebuild switch --flake $SCRIPT_DIR#system;
+sudo nixos-rebuild switch --flake $SCRIPT_DIR#system
 #+end_src
 
 Install and build the home-manager configuration:
@@ -93,7 +92,7 @@ nix run home-manager/master \
     --extra-experimental-features nix-command \
     --extra-experimental-features flakes \
     -- switch \
-    --flake $SCRIPT_DIR#user;
+    --flake $SCRIPT_DIR#user
 #+end_src
 
 #+begin_src sh :noweb yes :eval no :shebang #!/bin/sh :mkdirp yes :tangle ./bin/install
@@ -102,7 +101,7 @@ nix run home-manager/master \
 <<install-uefi-or-bios-check>>
 <<install-patch-flake-and-attune-to-user>>
 <<install-edit-flake-prompt>>
-<<install-harden-core-configuration>>
+# <<install-harden-core-configuration>>
 <<install-nixos-rebuild-system-with-flake>>
 <<install-and-build-home-manager-config>>
 #+end_src
@@ -124,9 +123,9 @@ After running this, the command `nix flake update` will require root.
 #+name: harden-check-pwd
 #+begin_src sh
 if [ "$#" = 1 ]; then
-    SCRIPT_DIR=$1;
+    SCRIPT_DIR=$1
 else
-    SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}"/.. )" &> /dev/null && pwd )
+    SCRIPT_DIR=$(cd -- "$(dirname -- "${BASH_SOURCE[0]}"/..)" &>/dev/null && pwd)
 fi
 #+end_src
 
@@ -134,22 +133,22 @@ Enter the script's directory, set ownership(s), and then leave:
 
 #+name: harden-enter-harden-and-exit
 #+begin_src sh
-pushd $SCRIPT_DIR &> /dev/null;
-sudo chown 0:0 .;
-sudo chown 0:0 profiles/*;
-sudo chown -R 0:0 system;
-sudo chown -R 0:0 patches;
-sudo chown 0:0 flake.lock;
+pushd $SCRIPT_DIR &>/dev/null
+sudo chown 0:0 .
+sudo chown 0:0 profiles/*
+sudo chown -R 0:0 system
+sudo chown -R 0:0 patches
+sudo chown 0:0 flake.lock
 sudo chown 0:0 flake.nix
 sudo chown 0:0 profiles
-sudo chown 0:0 profiles/*/configuration.nix;
-sudo chown 0:0 profiles/homelab/base.nix;
-sudo chown 0:0 bin/harden;
-sudo chown 0:0 bin/soften;
-sudo chown 0:0 bin/install;
-sudo chown 0:0 bin/update;
-sudo chown 1000:users **/README.org;
-popd &> /dev/null;
+sudo chown 0:0 profiles/*/configuration.nix
+sudo chown 0:0 profiles/homelab/base.nix
+sudo chown 0:0 bin/harden
+sudo chown 0:0 bin/soften
+sudo chown 0:0 bin/install
+sudo chown 0:0 bin/update
+sudo chown 1000:users **/README.org
+popd &>/dev/null
 #+end_src
 
 #+begin_src sh :noweb yes :eval no :shebang #!/bin/sh :tangle ./bin/harden
@@ -165,32 +164,32 @@ Automated script to update my non-primary system's configuration to be in sync w
 
 #+name: pull-set-enter-script-dir
 #+begin_src sh
-SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}"/.. )" &> /dev/null && pwd )
+SCRIPT_DIR=$(cd -- "$(dirname -- "${BASH_SOURCE[0]}"/..)" &>/dev/null && pwd)
 #+end_src
 
 Relax permissions temporarily so git can work (not currently needed as the hardening script is disabled):
 
 #+name: pull-temporary-softener
 #+begin_src sh
-sudo $SCRIPT_DIR/bin/soften $SCRIPT_DIR;
+sudo $SCRIPT_DIR/bin/soften $SCRIPT_DIR
 #+end_src
 
 Stash local edits, pull changes, and re-apply local edits:
 
 #+name: pull-stash-pull-apply
 #+begin_src sh
-pushd $SCRIPT_DIR &> /dev/null;
-git stash;
-git pull;
-git stash apply;
-popd &> /dev/null;
+pushd $SCRIPT_DIR &>/dev/null
+git stash
+git pull
+git stash apply
+popd &>/dev/null
 #+end_src
 
 Set permissions for files that should be owned by root:
 
 #+name: pull-set-perms
 #+begin_src sh
-sudo $SCRIPT_DIR/bin/harden $SCRIPT_DIR;
+sudo $SCRIPT_DIR/bin/harden $SCRIPT_DIR
 #+end_src
 
 #+begin_src sh :noweb yes :eval no :shebang #!/bin/sh :tangle ./bin/pull
@@ -216,13 +215,13 @@ After running this, *[unprivileged users] can make edits to important system fil
 
 #+begin_src sh :shebang #!/bin/sh :tangle ./bin/soften
 if [ "$#" = 1 ]; then
-    SCRIPT_DIR=$1;
+    SCRIPT_DIR=$1
 else
-    SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}"/.. )" &> /dev/null && pwd )
+    SCRIPT_DIR=$(cd -- "$(dirname -- "${BASH_SOURCE[0]}"/..)" &>/dev/null && pwd)
 fi
-pushd $SCRIPT_DIR &> /dev/null;
-sudo chown -R 1000:users /;
-popd &> /dev/null;
+pushd $SCRIPT_DIR &>/dev/null
+sudo chown -R 1000:users /
+popd &>/dev/null
 #+end_src
 
 * Update script
@@ -232,14 +231,14 @@ Script to update my flake without synchronizing configuration.
 #+end_quote
 
 #+begin_src sh :shebang #!/bin/sh :tangle ./bin/update
-SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}"/.. )" &> /dev/null && pwd )
+SCRIPT_DIR=$(cd -- "$(dirname -- "${BASH_SOURCE[0]}"/..)" &>/dev/null && pwd)
 
 # Update flake
-pushd $SCRIPT_DIR &> /dev/null;
-sudo nix flake update;
-sudo nix-channel --update;
-nix-channel --update;
-popd &> /dev/null;
+pushd $SCRIPT_DIR &>/dev/null
+sudo nix flake update
+sudo nix-channel --update
+nix-channel --update
+popd &>/dev/null
 #+end_src
 
 * Upgrade script
@@ -249,13 +248,13 @@ Script to update system and sync. Does not pull changes from git.
 #+end_quote
 
 #+begin_src sh :shebang #!/bin/sh :tangle ./bin/upgrade
-SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}"/.. )" &> /dev/null && pwd )
+SCRIPT_DIR=$(cd -- "$(dirname -- "${BASH_SOURCE[0]}"/..)" &>/dev/null && pwd)
 
 # Update flake
-$SCRIPT_DIR/bin/update;
+$SCRIPT_DIR/bin/update
 
 # Synchronize system
-$SCRIPT_DIR/bin/sync;
+$SCRIPT_DIR/bin/sync
 #+end_src
 
 * Sync scripts
@@ -266,10 +265,10 @@ Script to synchronize system state with configuration files for nixos system and
 #+end_quote
 
 #+begin_src sh :shebang #!/bin/sh :tangle ./bin/sync-system
-SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}"/.. )" &> /dev/null && pwd )
+SCRIPT_DIR=$(cd -- "$(dirname -- "${BASH_SOURCE[0]}"/..)" &>/dev/null && pwd)
 
 # Rebuild system
-sudo nixos-rebuild switch --flake $SCRIPT_DIR#system;
+sudo nixos-rebuild switch --flake $SCRIPT_DIR#system
 #+end_src
 
 ** User sync script
@@ -279,13 +278,13 @@ Script to synchronize system state with configuration files for nixos system and
 #+end_quote
 
 #+begin_src sh :shebang #!/bin/sh :tangle ./bin/sync-user
-SCRIPT_DIR=$( cd -- "$( dirname -- "${BASH_SOURCE[0]}"/.. )" &> /dev/null && pwd )
+SCRIPT_DIR=$(cd -- "$(dirname -- "${BASH_SOURCE[0]}"/..)" &>/dev/null && pwd)
 
 # Fix root-owned sqlite errors
-sudo chown -R 1000:users ~/.cache/nix;
+sudo chown -R 1000:users ~/.cache/nix
 
 # Install and build home-manager configuration
-home-manager switch --flake $SCRIPT_DIR#user;
+home-manager switch --flake $SCRIPT_DIR#user
 
 $SCRIPT_DIR/bin/sync-posthook
 #+end_src
@@ -324,8 +323,7 @@ Note: Currently disabled as it does not apply to this set up.
 {
   description = "chu's nixOS config flake";
 
-  outputs =
-    inputs@{ self, ... }:
+  outputs = inputs@{ self, ... }:
     let
       # ---- SYSTEM SETTINGS ---- #
       systemSettings = {
@@ -335,71 +333,64 @@ Note: Currently disabled as it does not apply to this set up.
         timezone = "America/Chicago";
         locale = "en_US.UTF-8";
         bootMode = "uefi"; # uefi or bios
-        bootMountPath = "/boot"; # mount path for efi boot partition; only used for uefi boot mode
-        grubDevice = ""; # device identifier for grub; only used for legacy (bios) boot mode
-        gpuType = "nvidia"; # amd, intel or nvidia; only makes some slight mods for amd at the moment
+        bootMountPath =
+          "/boot"; # mount path for efi boot partition; only used for uefi boot mode
+        grubDevice =
+          ""; # device identifier for grub; only used for legacy (bios) boot mode
+        gpuType =
+          "nvidia"; # amd, intel or nvidia; only makes some slight mods for amd at the moment
       };
-
       # ----- USER SETTINGS ----- #
       userSettings = rec {
         username = "chu";
         name = "chu";
         email = "chufilthymutt@gmail.com";
         dotfilesDir = "~/.config/dogfiles";
-        theme = "solarized-dark"; # selcted theme from the LibrePhoenix themes directory (./themes/)
+        theme =
+          "solarized-dark"; # selcted theme from the LibrePhoenix themes directory (./themes/)
         # wm = "hyprland"; # Selected window manager or desktop environment; must select one in both ./user/wm/ and ./system/wm/
         wm = ./system/wm/x11.nix; # TODO
         # window manager type (hyprland or x11) translator
         # wmType = if ((wm == "hyprland") || (wm == "plasma")) then "wayland" else "x11";
         wmType = ./system/wm/x11.nix; # TODO
-        browser = "librewolf"; # Default browser; must select one from ./user/app/browser/
-        # spawnBrowser = if ((browser == "qutebrowser") && (wm == "hyprland")) then "qutebrowser-hyprprofile" else (if (browser == "qutebrowser") then "qutebrowser --qt-flag enable-gpu-rasterization --qt-flag enable-native-gpu-memory-buffers --qt-flag num-raster-threads=4" else browser); # Browser spawn command must be specail for qb, since it doesn't gpu accelerate by default (why?)
+        browser =
+          "librewolf"; # Default browser; must select one from ./user/app/browser/
         defaultRoamDir = "roam"; # Default org roam directory relative to ~/Org
         term = "konsole";
         font = "Noto Sans"; # Selected font
         fontPkg = pkgs.noto-fonts; # Font package
         editor = "emacsclient";
-        # editor spawning translator
-        # generates a command that can be used to spawn editor inside a gui
-        # EDITOR and TERM session variables must be set in home.nix or other module
-        # I set the session variable SPAWNEDITOR to this in my home.nix for convenience
-        spawnEditor =
-          if (editor == "emacsclient") then
-            "emacsclient -c -a 'emacs'"
+        spawnEditor = if (editor == "emacsclient") then
+          "emacsclient -c -a 'emacs'"
+        else
+          (if ((editor == "vim") || (editor == "nvim")
+            || (editor == "nano")) then
+            "exec " + term + " -e " + editor
           else
-            (
-              if ((editor == "vim") || (editor == "nvim") || (editor == "nano")) then
-                "exec " + term + " -e " + editor
-              else
-                editor
-            );
+            editor);
       };
       # create patched nixpkgs
-      nixpkgs-patched =
-        (import inputs.nixpkgs {
-          system = systemSettings.system;
-          rocmSupport = (if systemSettings.gpu == "amd" then true else false);
-        }).applyPatches
-          {
-            name = "nixpkgs-patched";
-            src = inputs.nixpkgs;
-          };
-
+      nixpkgs-patched = (import inputs.nixpkgs {
+        system = systemSettings.system;
+        rocmSupport = (if systemSettings.gpu == "amd" then true else false);
+      }).applyPatches {
+        name = "nixpkgs-patched";
+        src = inputs.nixpkgs;
+      };
       # configure pkgs
       # use nixpkgs if running a server (homelab or worklab profile)
       # otherwise use patched nixos-unstable nixpkgs
-      pkgs = (
-        if ((systemSettings.profile == "homelab") || (systemSettings.profile == "worklab")) then
-          pkgs-stable
-        else
-          (import nixpkgs-patched {
-            system = systemSettings.system;
-            config = {
-              allowUnfree = true;
-              allowUnfreePredicate = (_: true);
-            };
-          })
-      );
+      pkgs = (if ((systemSettings.profile == "homelab")
+        || (systemSettings.profile == "worklab")) then
+        pkgs-stable
+      else
+        (import nixpkgs-patched {
+          system = systemSettings.system;
+          config = {
+            allowUnfree = true;
+            allowUnfreePredicate = (_: true);
+          };
+        }));
 
       pkgs-stable = import inputs.nixpkgs-stable {
         system = systemSettings.system;
@@ -417,53 +408,50 @@ Note: Currently disabled as it does not apply to this set up.
         };
       };
 
-      pkgs-emacs = import inputs.emacs-pin-nixpkgs { system = systemSettings.system; };
+      pkgs-emacs =
+        import inputs.emacs-pin-nixpkgs { system = systemSettings.system; };
 
-      pkgs-kdenlive = import inputs.kdenlive-pin-nixpkgs { system = systemSettings.system; };
+      pkgs-kdenlive =
+        import inputs.kdenlive-pin-nixpkgs { system = systemSettings.system; };
 
-      pkgs-nwg-dock-hyprland = import inputs.nwg-dock-hyprland-pin-nixpkgs {
-        system = systemSettings.system;
-      };
+      # pkgs-nwg-dock-hyprland = import inputs.nwg-dock-hyprland-pin-nixpkgs {
+      #   system = systemSettings.system;
+      # };
 
       # configure lib
       # use nixpkgs if running a server (homelab or worklab profile)
       # otherwise use patched nixos-unstable nixpkgs
-      lib = (
-        if ((systemSettings.profile == "homelab") || (systemSettings.profile == "worklab")) then
-          inputs.nixpkgs-stable.lib
-        else
-          inputs.nixpkgs.lib
-      );
+      lib = (if ((systemSettings.profile == "homelab")
+        || (systemSettings.profile == "worklab")) then
+        inputs.nixpkgs-stable.lib
+      else
+        inputs.nixpkgs.lib);
 
       # use home-manager-stable if running a server (homelab or worklab profile)
       # otherwise use home-manager-unstable
-      home-manager = (
-        if ((systemSettings.profile == "homelab") || (systemSettings.profile == "worklab")) then
-          inputs.home-manager-stable
-        else
-          inputs.home-manager-unstable
-      );
+      home-manager = (if ((systemSettings.profile == "homelab")
+        || (systemSettings.profile == "worklab")) then
+        inputs.home-manager-stable
+      else
+        inputs.home-manager-unstable);
 
       # Systems that can run tests:
-      supportedSystems = [
-        "aarch64-linux"
-        "i686-linux"
-        "x86_64-linux"
-      ];
+      supportedSystems = [ "aarch64-linux" "i686-linux" "x86_64-linux" ];
 
       # Function to generate a set based on supported systems:
       forAllSystems = inputs.nixpkgs.lib.genAttrs supportedSystems;
 
       # Attribute set of nixpkgs for each system:
-      nixpkgsFor = forAllSystems (system: import inputs.nixpkgs { inherit system; });
+      nixpkgsFor =
+        forAllSystems (system: import inputs.nixpkgs { inherit system; });
 
-    in
-    {
+    in {
       homeConfigurations = {
         user = home-manager.lib.homeManagerConfiguration {
           inherit pkgs;
           modules = [
-            (./. + "/profiles" + ("/" + systemSettings.profile) + "/home.nix") # load home.nix from selected PROFILE
+            (./. + "/profiles" + ("/" + systemSettings.profile)
+              + "/home.nix") # load home.nix from selected PROFILE
           ];
           extraSpecialArgs = {
             inherit pkgs-stable;
@@ -477,7 +465,8 @@ Note: Currently disabled as it does not apply to this set up.
         system = lib.nixosSystem {
           system = systemSettings.system;
           modules = [
-            (./. + "/profiles" + ("/" + systemSettings.profile) + "/configuration.nix")
+            (./. + "/profiles" + ("/" + systemSettings.profile)
+              + "/configuration.nix")
           ]; # load configuration.nix from selected PROFILE
           specialArgs = {
             inherit pkgs-stable;
@@ -487,20 +476,17 @@ Note: Currently disabled as it does not apply to this set up.
           };
         };
       };
-      packages = forAllSystems (
-        system:
-        let
-          pkgs = nixpkgsFor.${system};
-        in
-        {
+      packages = forAllSystems (system:
+        let pkgs = nixpkgsFor.${system};
+        in {
           default = self.packages.${system}.install;
           install = pkgs.writeShellApplication {
             name = "install";
-            runtimeInputs = with pkgs; [ git ]; # I could make this fancier by adding other deps
+            runtimeInputs = with pkgs;
+              [ git ]; # I could make this fancier by adding other deps
             text = ''${./bin/install} "$@"'';
           };
-        }
-      );
+        });
       apps = forAllSystems (system: {
         default = self.apps.${system}.install;
         install = {
@@ -539,10 +525,7 @@ Note: Currently disabled as it does not apply to this set up.
 # Edit this configuration file to define what should be installed on
 # your system.  Help is available in the configuration.nix(5) man page
 # and in the NixOS manual (accessible by running ‘nixos-help’).
-
-{ pkgs, lib, inputs, systemSettings, userSettings, ... }:
-
-{
+{ pkgs, lib, inputs, systemSettings, userSettings, ... }: {
   imports = [
     # Include the results of the hardware scan.
     ../../system/hardware-configuration.nix
@@ -597,8 +580,6 @@ Note: Currently disabled as it does not apply to this set up.
         systemSettings.grubDevice; # does nothing if running uefi rather than bios
     };
     kernelModules = [ "i2c-dev" "i2c-piix4" "cpufreq_powersave" ];
-    # initrd.luks.devices."luks-c233bfdc-56f5-4381-982a-3e17a746e0da".device =
-    #   "/dev/disk/by-uuid/c233bfdc-56f5-4381-982a-3e17a746e0da"; # TODO
   };
 
   networking = {
@@ -626,7 +607,7 @@ Note: Currently disabled as it does not apply to this set up.
     isNormalUser = true;
     description = userSettings.name;
     extraGroups =
-      [ "networkmanager" "wheel" "input" "dialout" "video" "render" ];
+      [ "networkmanager" "wheel" "input" "dialout" "video" "audio" "render" ];
     packages = [ ];
     uid = 1000;
   };
@@ -840,9 +821,7 @@ Note: Currently disabled as it does not apply to this set up.
 ** app/
 *** gamemode.nix
 #+begin_src nix :mkdirp yes :tangle ./system/app/gamemode.nix
-{ pkgs, ... }:
-
-{
+{ pkgs, ... }: {
   # Feral GameMode
   environment.systemPackages = [ pkgs.gamemode ];
   programs.gamemode.enable = true;
@@ -862,9 +841,7 @@ Note: Currently disabled as it does not apply to this set up.
 #+end_src
 *** steam.nix
 #+begin_src nix :mkdirp yes :tangle ./system/app/steam.nix
-{ pkgs, ... }:
-
-{
+{ pkgs, ... }: {
   hardware.opengl.driSupport32Bit = true;
   programs.steam.enable = true;
   environment = {
@@ -878,9 +855,7 @@ Note: Currently disabled as it does not apply to this set up.
 #+end_src
 *** vm.nix
 #+begin_src nix :mkdirp yes :tangle ./system/app/vm.nix
-{ config, pkgs, ... }:
-
-{
+{ config, pkgs, ... }: {
   environment.systemPackages = with pkgs; [
     virt-manager
     looking-glass-client
@@ -897,18 +872,14 @@ Note: Currently disabled as it does not apply to this set up.
 ** hardware/
 *** bluetooth.nix
 #+begin_src nix :mkdirp yes :tangle ./system/hardware/bluetooth.nix
-{ ... }:
-
-{
+{ ... }: {
   hardware.bluetooth.enable = true;
   services.blueman.enable = true;
 }
 #+end_src
 *** kernel.nix
 #+begin_src nix :mkdirp yes :tangle ./system/hardware/kernel.nix
-{ config, pkgs, ... }:
-
-{
+{ config, pkgs, ... }: {
   # boot = {
   #   kernelPackages = pkgs.linux;
   #   consoleLogLevel = 0;
@@ -917,9 +888,7 @@ Note: Currently disabled as it does not apply to this set up.
 #+end_src
 *** opengl.nix
 #+begin_src nix :mkdirp yes :tangle ./system/hardware/opengl.nix
-{ pkgs, ... }:
-
-{
+{ pkgs, ... }: {
   # OpenGL
   hardware.graphics = {
     enable = true;
@@ -929,9 +898,7 @@ Note: Currently disabled as it does not apply to this set up.
 #+end_src
 *** power.nix
 #+begin_src nix :mkdirp yes :tangle ./system/hardware/power.nix
-{ ... }:
-
-{
+{ ... }: {
   services.power-profiles-daemon.enable = false;
   services.tlp = {
     enable = true;
@@ -942,36 +909,28 @@ Note: Currently disabled as it does not apply to this set up.
       CPU_ENERGY_PERF_POLICY_ON_AC = "balance_performance";
       CPU_DRIVER_OPMODE_ON_AC = "active";
       CPU_DRIVER_OPMODE_ON_BAT = "active";
-
       WIFI_PWR_ON_AC = "on";
       WIFI_PWR_ON_BAT = "on";
       RUNTIME_PM_ON_AC = "auto";
       RUNTIME_PM_ON_BAT = "auto";
-
       CPU_MIN_PERF_ON_AC = 10;
       CPU_MAX_PERF_ON_AC = 90;
       CPU_MIN_PERF_ON_BAT = 10;
       CPU_MAX_PERF_ON_BAT = 50;
-
       CPU_BOOST_ON_AC = 1;
       CPU_BOOST_ON_BAT = 0;
       CPU_HWP_DYN_BOOST_ON_AC = 1;
       CPU_HWP_DYN_BOOST_ON_BAT = 0;
-
       START_CHARGE_THRESH_BAT0 = 75;
       STOP_CHARGE_THRESH_BAT0 = 80;
-
       MEM_SLEEP_ON_AC = "deep";
       MEM_SLEEP_ON_BAT = "deep";
-
       PLATFORM_PROFILE_ON_AC = "performance";
       PLATFORM_PROFILE_ON_BAT = "low-power";
-
       RADEON_DPM_STATE_ON_AC = "performance";
       RADEON_DPM_STATE_ON_BAT = "battery";
       RADEON_POWER_PROFILE_ON_AC = "high";
       RADEON_POWER_PROFILE_ON_BAT = "low";
-
       INTEL_GPU_MIN_FREQ_ON_AC = 600;
       INTEL_GPU_MIN_FREQ_ON_BAT = 600;
     };
@@ -980,9 +939,7 @@ Note: Currently disabled as it does not apply to this set up.
 #+end_src
 *** printing.nix
 #+begin_src nix :mkdirp yes :tangle ./system/hardware/printing.nix
-{ pkgs, ... }:
-
-{
+{ pkgs, ... }: {
   # Enable printing
   services = {
     printing.enable = true;
@@ -996,9 +953,7 @@ Note: Currently disabled as it does not apply to this set up.
 #+end_src
 *** systemd.nix
 #+begin_src nix :mkdirp yes :tangle ./system/hardware/systemd.nix
-{ ... }:
-
-{ # systemd journal garbage collection/refusal
+{ ... }: { # systemd journal garbage collection/refusal
   services.journald = {
     extraConfig = ''
       SystemMaxUse=50M
@@ -1009,20 +964,16 @@ Note: Currently disabled as it does not apply to this set up.
 }
 #+end_src
 *** time.nix
-#+begin_src nix :mkdirp yes :tangle ./system/hardware/time.nix
-{ ... }:
 
-{
-  # I assume this is ntp time syncing for the system clock.
-  services.timesyncd.enable = true;
-}
+I assume this is NTP time syncing for the system clock.
+
+#+begin_src nix :mkdirp yes :tangle ./system/hardware/time.nix
+{ ... }: { services.timesyncd.enable = true; }
 #+end_src
 ** security/
 *** firewall.nix
 #+begin_src nix :mkdirp yes :tangle ./system/security/firewall.nix
-{ ... }:
-
-{
+{ ... }: {
   networking.firewall = {
     # Open ports in the firewall.
     # allowedTCPPorts = [ ... ];
@@ -1034,9 +985,7 @@ Note: Currently disabled as it does not apply to this set up.
 #+end_src
 *** gpg.nix
 #+begin_src nix :mkdirp yes :tangle ./system/security/gpg.nix
-{ ... }:
-
-{
+{ ... }: {
   # Some programs need SUID wrappers, can be configured further or are
   # started in user sessions.
   programs = {
@@ -1050,19 +999,18 @@ Note: Currently disabled as it does not apply to this set up.
 #+end_src
 *** proxy.nix
 #+begin_src nix :mkdirp yes :tangle ./system/security/proxy.nix
-{ ... }:
-
-{
+{ ... }: {
   # Configure network proxy if necessary
   # proxy.default = "http://user:password@proxy:port/";
   # proxy.noProxy = "127.0.0.1,localhost,internal.domain";
 }
 #+end_src
 *** sshd.nix
-#+begin_src nix :mkdirp yes :tangle ./system/security/sshd.nix
-{ userSettings, ... }:
 
-{
+Currently insecure.
+
+#+begin_src nix :mkdirp yes :tangle ./system/security/sshd.nix
+{ userSettings, ... }: {
   # Enable incoming ssh
   services.openssh = {
     enable = true;
@@ -1077,11 +1025,8 @@ Note: Currently disabled as it does not apply to this set up.
 ** wm/
 *** x11.nix
 #+begin_src nix :mkdirp yes :tangle ./system/wm/x11.nix
-{ pkgs, ... }:
-# TODO be able to pick between kde/gnome/suckless & be able to extend
-{
+{ pkgs, ... }: {
   imports = [ ./pipewire.nix ./dbus.nix ./gnome-keyring.nix ];
-
   services = {
     xserver = {
       enable = true; # Enable the X11 windowing system.
@@ -1107,15 +1052,12 @@ Note: Currently disabled as it does not apply to this set up.
       plasma6.enable = true; # KDE
       # gnome.enable = true; # GNOME
     };
-
     # windowManager = {
     # dwm.enable = true; # suckless
     # exwm.enable = true; # emacs
     # };
-
     # For virtual machine guests to enable a daemon allowing for clipboard (copy/paste) sharing.
     spice-vdagentd.enable = true; # TODO VM flag
-
     libinput = {
       enable =
         true; # Enable touchpad support (enabled default in most desktopManager).
@@ -1124,34 +1066,24 @@ Note: Currently disabled as it does not apply to this set up.
   };
 }
 #+end_src
+**** TODO be able to pick between kde/gnome/suckless & be able to extend
 *** dbus.nix
 #+begin_src nix :mkdirp yes :tangle ./system/wm/dbus.nix
-{ pkgs, ... }:
-
-{
+{ pkgs, ... }: {
   services.dbus = {
     enable = true;
     packages = [ pkgs.dconf ];
   };
-
   programs.dconf = { enable = true; };
 }
 #+end_src
 *** gnome-keyring.nix
 #+begin_src nix :mkdirp yes :tangle ./system/wm/gnome-keyring.nix
-{ ... }:
-
-{
-  services.gnome = {
-    gnome-keyring.enable = true;
-  };
-}
+{ ... }: { services.gnome = { gnome-keyring.enable = true; }; }
 #+end_src
 *** pipewire.nix
 #+begin_src nix :mkdirp yes :tangle ./system/wm/pipewire.nix
-{ ... }:
-
-{
+{ ... }: {
   # Pipewire
   security.rtkit.enable = true;
   services.pipewire = {
@@ -1168,55 +1100,43 @@ Note: Currently disabled as it does not apply to this set up.
 *** browser/
 **** librewolf.nix
 #+begin_src nix :mkdirp yes :tangle ./user/app/browser/librewolf.nix
-{ pkgs, userSettings, ... }:
-
-{
+{ pkgs, userSettings, ... }: {
   # Module installing librewolf as default browser
-  home.packages =
-    if (userSettings.wmType == "wayland") then [ pkgs.librewolf-wayland ] else [ pkgs.librewolf ];
-
-  home.sessionVariables =
-    if (userSettings.wmType == "wayland") then
-      {
-        DEFAULT_BROWSER = "${pkgs.librewolf-wayland}/bin/librewolf";
-      }
-    else
-      {
-        DEFAULT_BROWSER = "${pkgs.librewolf}/bin/librewolf";
-      };
-
-  home.file.".librewolf/librewolf.overrides.cfg".text =
-    ''
-      defaultPref("font.name.serif.x-western","
-    ''
-    + userSettings.font
-    + ''
-      ");
-          defaultPref("font.size.variable.x-western",20);
-          defaultPref("browser.toolbars.bookmarks.visibility","always");
-          defaultPref("privacy.resisttFingerprinting.letterboxing", true);
-          defaultPref("network.http.referer.XOriginPolicy",2);
-          defaultPref("privacy.clearOnShutdown.history",true);
-          defaultPref("privacy.clearOnShutdown.downloads",true);
-          defaultPref("privacy.clearOnShutdown.cookies",true);
-          defaultPref("gfx.webrender.software.opengl",false);
-          defaultPref("webgl.disabled",true);
-          pref("font.name.serif.x-western","
-    ''
-    + userSettings.font
-    + ''
-      ");
-          pref("font.size.variable.x-western",20);
-          pref("browser.toolbars.bookmarks.visibility","always");
-          pref("privacy.resisttFingerprinting.letterboxing", true);
-          pref("network.http.referer.XOriginPolicy",2);
-          pref("privacy.clearOnShutdown.history",true);
-          pref("privacy.clearOnShutdown.downloads",true);
-          pref("privacy.clearOnShutdown.cookies",true);
-          pref("gfx.webrender.software.opengl",false);
-          pref("webgl.disabled",true);
-    '';
-
+  home.packages = if (userSettings.wmType == "wayland") then
+    [ pkgs.librewolf-wayland ]
+  else
+    [ pkgs.librewolf ];
+  home.sessionVariables = if (userSettings.wmType == "wayland") then {
+    DEFAULT_BROWSER = "${pkgs.librewolf-wayland}/bin/librewolf";
+  } else {
+    DEFAULT_BROWSER = "${pkgs.librewolf}/bin/librewolf";
+  };
+  home.file.".librewolf/librewolf.overrides.cfg".text = ''
+    defaultPref("font.name.serif.x-western","
+  '' + userSettings.font + ''
+    ");
+        defaultPref("font.size.variable.x-western",20);
+        defaultPref("browser.toolbars.bookmarks.visibility","always");
+        defaultPref("privacy.resisttFingerprinting.letterboxing", true);
+        defaultPref("network.http.referer.XOriginPolicy",2);
+        defaultPref("privacy.clearOnShutdown.history",true);
+        defaultPref("privacy.clearOnShutdown.downloads",true);
+        defaultPref("privacy.clearOnShutdown.cookies",true);
+        defaultPref("gfx.webrender.software.opengl",false);
+        defaultPref("webgl.disabled",true);
+        pref("font.name.serif.x-western","
+  '' + userSettings.font + ''
+    ");
+        pref("font.size.variable.x-western",20);
+        pref("browser.toolbars.bookmarks.visibility","always");
+        pref("privacy.resisttFingerprinting.letterboxing", true);
+        pref("network.http.referer.XOriginPolicy",2);
+        pref("privacy.clearOnShutdown.history",true);
+        pref("privacy.clearOnShutdown.downloads",true);
+        pref("privacy.clearOnShutdown.cookies",true);
+        pref("gfx.webrender.software.opengl",false);
+        pref("webgl.disabled",true);
+  '';
   xdg.mimeApps.defaultApplications = {
     "text/html" = "librewolf.desktop";
     "x-scheme-handler/http" = "librewolf.desktop";
@@ -1285,9 +1205,7 @@ in {
 #+end_src
 *** git/git.nix
 #+begin_src nix :mkdirp yes :tangle ./user/app/git/git.nix
-{ config, pkgs, userSettings, ... }:
-
-{
+{ config, pkgs, userSettings, ... }: {
   home.packages = [ pkgs.git ];
   programs.git = {
     enable = true;
@@ -1303,17 +1221,12 @@ in {
 #+end_src
 *** keepass/keepass.nix
 #+begin_src nix :mkdirp yes :tangle ./user/app/keepass/keepass.nix
-{ config, pkgs, ... }:
-
-{
-  home.packages = with pkgs; [ keepassxc keepmenu ];
-}
+{ config, pkgs, ... }: { home.packages = with pkgs; [ keepassxc keepmenu ]; }
 #+end_src
 *** lf/
 **** lf.nix
 #+begin_src nix :mkdirp yes :tangle ./user/app/lf/lf.nix
 { config, pkgs, ... }: {
-
   home = {
     packages = with pkgs; [ lf ueberzugpp ];
     file = {
@@ -1331,7 +1244,6 @@ in {
 if [ -n "$FIFO_UEBERZUG" ]; then
 	printf '{"action": "remove", "identifier": "PREVIEW"}\n' > "$FIFO_UEBERZUG"
 fi
-
 #+end_src
 **** icons
 #+begin_src conf :tangle ./user/app/lf/icons
@@ -1592,8 +1504,6 @@ map <gt> $printf "%s" "$fx" | sed -E 's/^.+\[/https:\/\/piped.video\/watch?v=/' 
 map T $nsxiv -t "$(pwd)" # opens thumbnail mode
 map <c-l> unselect
 
-
-
 # Source Bookmarks
 source "~/.config/lf/shortcutrc"
 #+end_src
@@ -1659,14 +1569,11 @@ image/svg+xml)
 	application/pgp-encrypted) gpg -d -- "$1" ;;
 esac
 exit 1
-
 #+end_src
 *** terminal/
 **** alacritty.nix
 #+begin_src nix :mkdirp yes :tangle ./user/app/terminal/alacritty.nix
-{ pkgs, lib, ... }:
-
-{
+{ pkgs, lib, ... }: {
   home.packages = with pkgs; [ alacritty ];
   programs.alacritty = {
     enable = true;
@@ -1676,9 +1583,7 @@ exit 1
 #+end_src
 **** kitty.nix
 #+begin_src nix :tangle ./user/app/terminal/kitty.nix
-{ pkgs, lib, ... }:
-
-{
+{ pkgs, lib, ... }: {
   home.packages = with pkgs; [ kitty ];
   programs.kitty = {
     enable = true;
@@ -1691,9 +1596,7 @@ exit 1
 #+end_src
 **** konsole.nix
 #+begin_src nix :tangle ./user/app/terminal/konsole.nix
-{ pkgs, lib, ... }:
-
-{
+{ pkgs, lib, ... }: {
   home.packages = with pkgs; [ kdePackages.konsole ];
   programs.kdePackages.konsole.enable = true;
   programs.kdePackages.konsole.settings = {
@@ -1703,9 +1606,7 @@ exit 1
 #+end_src
 **** st.nix
 #+begin_src nix :tangle ./user/app/terminal/st.nix
-{ pkgs, lib, ... }:
-
-{
+{ pkgs, lib, ... }: {
   home.packages = with pkgs; [ st ];
   programs.st = {
     enable = true;
@@ -1714,9 +1615,7 @@ exit 1
 #+end_src
 *** vm/vm.nix
 #+begin_src nix :mkdirp yes :tangle ./user/app/vm/vm.nix
-{ config, pkgs, ... }:
-
-{
+{ config, pkgs, ... }: {
   # Various packages related to virtualization, compatibility and sandboxing.
   home.packages = with pkgs; [
     # Virtual Machines and wine
@@ -1727,23 +1626,18 @@ exit 1
     lxc
     swtpm
     bottles
-
     # Filesystems
     dosfstools
   ];
-
   home.file.".config/libvirt/qemu.conf".text = ''
     nvram = ["/run/libvirt/nix-ovmf/OVMF_CODE.fd:/run/libvirt/nix-ovmf/OVMF_VARS.fd"]
   '';
-
 }
 #+end_src
 ** hardware/
 *** bluetooth.nix
 #+begin_src nix :mkdirp yes :tangle ./user/hardware/bluetooth.nix
-{ pkgs, ... }:
-
-{
+{ pkgs, ... }: {
   home.packages = with pkgs; [ blueman ];
   services = { blueman-applet.enable = true; };
 }
@@ -1751,17 +1645,13 @@ exit 1
 ** lang/
 *** cc/cc.nix
 #+begin_src nix :mkdirp yes :tangle ./user/lang/cc/cc.nix
-{ pkgs, ... }:
-
-{
+{ pkgs, ... }: {
   home.packages = with pkgs; [ gcc gnumake cmake autoconf automake libtool ];
 }
 #+end_src
 *** lisp/lisp.nix
 #+begin_src nix :mkdirp yes :tangle ./user/lang/lisp/lisp.nix
-{ pkgs, ... }:
-
-{
+{ pkgs, ... }: {
   home.packages = with pkgs; [
     rlwrap
     roswell
@@ -1777,11 +1667,7 @@ exit 1
 #+end_src
 *** rust/rust.nix
 #+begin_src nix :mkdirp yes :tangle ./user/lang/rust/rust.nix
-{ pkgs, ... }:
-
-{
-  home.packages = with pkgs; [ rustup ];
-}
+{ pkgs, ... }: { home.packages = with pkgs; [ rustup ]; }
 #+end_src
 ** shell/sh.nix
 #+begin_src nix :mkdirp yes :tangle ./user/shell/sh.nix
