--- a/README.org
+++ b/README.org
@@ -728,7 +728,7 @@ Note: Currently disabled as it does not apply to this set up.
     stateVersion = "24.05"; # Do not modify.
     sessionVariables = { # Add Doom Emacs binaries to $PATH.
       PATH =
-        "${config.home.homeDirectory}/.config/emacs/bin/:${lib.getEnv "PATH"}";
+        "${config.home.homeDirectory}/.config/emacs/bin/:${getEnv "PATH"}";
     };
     packages = with pkgs; [
       # core
