--- a/README.org
+++ b/README.org
@@ -727,8 +727,9 @@ Note: Currently disabled as it does not apply to this set up.
     homeDirectory = "/home/" + userSettings.username;
     stateVersion = "24.05"; # Do not modify.
     sessionVariables = { # Add Doom Emacs binaries to $PATH.
-      PATH =
-        "${config.home.homeDirectory}/.config/emacs/bin/:${getEnv "PATH"}";
+      PATH = "${config.home.homeDirectory}/.config/emacs/bin/:${
+          pkgs.lib.getEnv "PATH"
+        }";
     };
     packages = with pkgs; [
       # core
