small change as a test

--- a/README.org
+++ b/README.org
@@ -1671,7 +1671,7 @@ exit 1
 #+begin_src nix :mkdirp yes :tangle ./user/shell/sh.nix
 { pkgs, ... }:
 let
-  aliases = {
+  myAliases = {
     g = "git";
     ga = "git add .";
     gc = "git commit -m";
@@ -1685,7 +1685,7 @@ in {
       autosuggestion.enable = true;
       syntaxHighlighting.enable = true;
       enableCompletion = true;
-      shellAliases = aliases;
+      shellAliases = myAliases;
       initExtra = ''
         PROMPT=" ◉ %U%F{magenta}%n%f%u@%U%F{blue}%m%f%u:%F{yellow}%~%f
         %F{green}→%f "
@@ -1701,7 +1701,7 @@ in {
     bash = {
       enable = true;
       enableCompletion = true;
-      shellAliases = aliases;
+      shellAliases = myAliases;
     };
     direnv = {
       enable = true;
