trying to get zsh working

--- a/README.org
+++ b/README.org
@@ -1699,7 +1699,7 @@ in {
       '';
     };
     bash = {
-      enable = true;
+      # enable = true;
       enableCompletion = true;
       shellAliases = myAliases;
     };
