hard code home path for dotfilesDir

--- a/README.org
+++ b/README.org
@@ -348,7 +348,7 @@ Note: Currently disabled as it does not apply to this set up.
         username = "chu";
         name = "chu";
         email = "chufilthymutt@gmail.com";
-        dotfilesDir = "~/.config/dogfiles";
+        dotfilesDir = "/home/chu/.config/dogfiles";
         theme =
           "solarized-dark"; # selcted theme from the LibrePhoenix themes directory (./themes/)
         # wm = "hyprland"; # Selected window manager or desktop environment; must select one in both ./user/wm/ and ./system/wm/
