reformatting, add kde changes

--- a/README.org
+++ b/README.org
@@ -19,6 +19,7 @@ which will run a number of installation scripts, which are detailed below. Credi
 
 *Heads up!*: For now, these scripts should be run from /within/ the =bin/= directory. I want to fix that in the future.
 
+* Scripts
 ** Install script
 
 Clone dotfiles:
@@ -158,8 +159,7 @@ popd &>/dev/null
 <<harden-check-pwd>>
 <<harden-enter-harden-and-exit>>
 #+end_src
-
-* Pull script
+** Pull script
 
 #+begin_quote
 Automated script to update my non-primary system's configuration to be in sync with [the] upstream git [repository] while preserving local edits to [the configuration via a =git stash= command].
@@ -202,7 +202,7 @@ sudo $SCRIPT_DIR/bin/harden $SCRIPT_DIR
 <<pull-set-perms>>
 #+end_src
 
-* Soften script
+** Soften script
 
 This will soften the security of these dotfiles, allowing the default unpriveleged user with UID/GID of 1000 to edit ALL FILES in the dotfiles directory.
 
@@ -227,7 +227,7 @@ sudo chown -R 1000:users /
 popd &>/dev/null
 #+end_src
 
-* Update script
+** Update script
 
 #+begin_quote
 Script to update my flake without synchronizing configuration.
@@ -244,7 +244,7 @@ nix-channel --update
 popd &>/dev/null
 #+end_src
 
-* Upgrade script
+** Upgrade script
 
 #+begin_quote
 Script to update system and sync. Does not pull changes from git.
@@ -260,8 +260,8 @@ $SCRIPT_DIR/update
 $SCRIPT_DIR/sync
 #+end_src
 
-* Sync scripts
-** System sync script
+** Sync scripts
+*** System sync script
 
 #+begin_quote
 Script to synchronize system state with configuration files for nixos system and home-manager.
@@ -274,7 +274,7 @@ SCRIPT_DIR=$(cd -- "$(dirname -- "${BASH_SOURCE[0]}")" &>/dev/null && pwd)
 sudo nixos-rebuild switch --flake $SCRIPT_DIR#system
 #+end_src
 
-** User sync script
+*** User sync script
 
 #+begin_quote
 Script to synchronize system state with configuration files for nixos system and home-manager.
@@ -292,7 +292,7 @@ home-manager switch --flake $SCRIPT_DIR#user
 $SCRIPT_DIR/sync-posthook
 #+end_src
 
-** Post-hook sync script
+*** Post-hook sync script
 
 #+begin_quote
 Post hooks to be called after a configuration sync.
@@ -320,7 +320,7 @@ Note: Currently disabled as it does not apply to this set up.
 # emacs
 # pgrep emacs &> /dev/null && echo "Reloading emacs stylix theme" && echo "Running emacsclient --no-wait --eval \"(load-theme 'doom-stylix t nil)\"" && emacsclient --no-wait --eval "(load-theme 'doom-stylix t nil)" &> /dev/null;
 #+end_src
-** Sync script
+*** Sync script
 #+begin_src sh :shebang #!/bin/sh :tangle ./bin/sync
 ./sync-system && ./sync-user
 #+end_src
@@ -805,6 +805,14 @@ Note: Currently disabled as it does not apply to this set up.
       path = userSettings.username;
       search = { default = "DuckDuckGo"; };
     };
+    xsession = {
+      enable = true;
+      windowManager.kde.enable = true;
+      windowManager.kde.extraConfig = ''
+        [Theme]
+        name=BreezeDark
+      '';
+    };
   };
 
   services = {
@@ -814,14 +822,14 @@ Note: Currently disabled as it does not apply to this set up.
     };
   };
 
-  # xdg = {
-  #   enable = true;
-  #   userDirs = {
-  #     enable = true;
-  #     createDirectories = true;
-  #     # TODO
-  #   };
-  # };
+  xdg = {
+    enable = true;
+    userDirs = {
+      enable = true;
+      # createDirectories = true;
+      # # TODO
+    };
+  };
 }
 #+end_src
 * system/
