change browser, cleanup

--- a/README.org
+++ b/README.org
@@ -354,13 +354,11 @@ Note: Currently disabled as it does not apply to this set up.
         dotfilesDir = "/home/chu/.config/dogfiles";
         theme =
           "solarized-dark"; # selcted theme from the LibrePhoenix themes directory (./themes/)
-        # wm = "hyprland"; # Selected window manager or desktop environment; must select one in both ./user/wm/ and ./system/wm/
-        wm = ./system/wm/x11.nix; # TODO
+        # wm = ./system/wm/x11.nix; # TODO
         # window manager type (hyprland or x11) translator
-        # wmType = if ((wm == "hyprland") || (wm == "plasma")) then "wayland" else "x11";
-        wmType = ./system/wm/x11.nix; # TODO
+        # wmType = ./system/wm/x11.nix; # TODO
         browser =
-          "librewolf"; # Default browser; must select one from ./user/app/browser/
+          "firefox"; # Default browser; must select one from ./user/app/browser/
         defaultRoamDir = "roam"; # Default org roam directory relative to ~/Org
         term = "konsole";
         font = "Noto Sans"; # Selected font
@@ -546,7 +544,6 @@ Note: Currently disabled as it does not apply to this set up.
     ../../system/security/sshd.nix
     ../../system/security/proxy.nix
     ../../system/security/firewall.nix
-    # TODO ../../system/security/automount.nix
   ];
 
   # Fix nix path
@@ -822,8 +819,6 @@ Note: Currently disabled as it does not apply to this set up.
     enable = true;
     userDirs = {
       enable = true;
-      # createDirectories = true;
-      # # TODO
     };
   };
 }
